--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="calculator">
-        <div class="display">0</div>
+        <div class="display" id="display">0</div>
         <div class="buttons">
             <button class="btn" id="clear">C</button>
             <button class="btn" id="delete">DEL</button>
