--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="heading">
+        CalcMate - a simple calculator made using JavaScript
+    </div>
+
     <div class="calculator">
         <div class="display" id="display">0</div>
         <div class="buttons">
